// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`incrementAsync 1`] = `
Object {
  "d": Object {
    "index": 300,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        "Increment Async",
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
          "onClick": Object {
            "$": "Bind",
            "args": Array [
              Object {
                "i": "extrasDispatch",
              },
            ],
            "func": Object {
              "i": "runIncrementAsync",
            },
            "self": undefined,
          },
        },
      },
      "type": "button",
    },
  },
}
`;

exports[`incrementIfOdd 1`] = `
Object {
  "d": Object {
    "index": 400,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        "Increment if odd",
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
          "onClick": Object {
            "$": "Bind",
            "args": Array [
              Object {
                "i": "extrasDispatch",
              },
              "INCREMENT",
              undefined,
            ],
            "func": Object {
              "i": "_signal",
            },
            "self": null,
          },
        },
      },
      "type": "button",
    },
  },
}
`;

exports[`incrementIfOdd 2`] = `
Object {
  "d": Object {
    "index": 400,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        "Increment if odd",
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
          "onClick": Object {
            "i": "nop",
          },
        },
      },
      "type": "button",
    },
  },
}
`;
